# magento2-ls

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  decs.d.ts  package-lock.json  package.json  stylua.toml  tsconfig.json
.github/workflows/: release.yaml  release.yaml.rustanalyzer  release.yml  test.yml
lua/: magento2_ls.lua
src/: index.ts  indexer.rs  js.rs  lsp.rs  m2.rs  m2_types.rs  main.rs  php.rs  php.ts  queries.rs  server.ts  state.rs  ts.rs  types.ts  xml.rs  xml.ts
src/lsp/: completion.rs  definition.rs
src/lsp/completion/: events.rs
src/lsp/definition/: component.rs  php.rs  phtml.rs
tests/: test.xml
tests/app/code/Some/Module/: Test.php  registration.php
vscode/: LICENSE  extension.js  package-lock.json  package.json
