[package]
name = "magento2-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.7.4"
lsp-types = "0.94.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
