[package]
name = "magento2-ls"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
convert_case = "0.6.0"
glob = "0.3.1"
lsp-server = "0.7.4"
lsp-types = "0.94.1"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tree-sitter = "0.20.10"
tree-sitter-parsers = "0.0.5"
